--- a/.github/workflows/backup.yaml
+++ b/.github/workflows/backup.yaml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main, dev]
   workflow_dispatch:
+    inputs:
+      confirm:
+        description: 'Confirma a execução do workflow'
+        required: true
+        default: 'yes'
   schedule:
     - cron: "0 0 * * *" # Runs every day at midnight
 
